--- a/contacto.jade
+++ b/contacto.jade
@@ -5,24 +5,23 @@ html
 	body
 		include includes/header
 
-		#slider
-			// imagenes
+		include includes/slider
 
 		section#interna
 
 			.container
 				
-				h1 Contacto
+				h1 Contacto 
 				p Para nosotros es muy importante tu opinión. Por lo mismo nos ponemos a tus órdenes para resolver cualquier tipo de duda o aclaración, o cualquier tipo de comentario al respecto.
 				.form
 					label 
-						span Nombre:
+						span Nombre: 
 						input(type="text")
 					label 
 						span Empresa:
 						input(type="text") 
 					label 
-						span E-mail:
+						span E-mail: 
 						input(type="text") 
 					label 
 						span Teléfono:
