--- a/css/styles.css
+++ b/css/styles.css
@@ -1652,188 +1652,336 @@ ul.icons li [class*=" icon-"] {
   box-sizing: border-box;
 }
 
-/* line 21, ../sass/styles.sass */
+@font-face {
+  font-family: "nunitobold";
+  src: url("../font/nunito-bold-webfont.eot");
+  src: url("../font/nunito-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../font/nunito-bold-webfont.woff") format("woff"), url("../font/nunito-bold-webfont.ttf") format("truetype"), url("../font/nunito-bold-webfont.svg#nunitobold") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "nunitolight";
+  src: url("../font/nunito-light-webfont.eot");
+  src: url("../font/nunito-light-webfont.eot?#iefix") format("embedded-opentype"), url("../font/nunito-light-webfont.woff") format("woff"), url("../font/nunito-light-webfont.ttf") format("truetype"), url("../font/nunito-light-webfont.svg#nunitolight") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "nunitoregular";
+  src: url("../font/nunito-regular-webfont.eot");
+  src: url("../font/nunito-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../font/nunito-regular-webfont.woff") format("woff"), url("../font/nunito-regular-webfont.ttf") format("truetype"), url("../font/nunito-regular-webfont.svg#nunitoregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "droidsansbold";
+  src: url("../font/DroidSans-Bold-webfont.eot");
+  src: url("../font/DroidSans-Bold-webfont.eot?#iefix") format("embedded-opentype"), url("../font/DroidSans-Bold-webfont.woff") format("woff"), url("../font/DroidSans-Bold-webfont.ttf") format("truetype"), url("../font/DroidSans-Bold-webfont.svg#droidsansbold") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "droidsans";
+  src: url("../font/DroidSans-webfont.eot");
+  src: url("../font/DroidSans-webfont.eot?#iefix") format("embedded-opentype"), url("../font/DroidSans-webfont.woff") format("woff"), url("../font/DroidSans-webfont.ttf") format("truetype"), url("../font/DroidSans-webfont.svg#droidsans") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
+/* line 22, ../sass/styles.sass */
 .container {
   width: 960px;
   margin: 0 auto;
+  position: relative;
 }
 
-/* line 24, ../sass/styles.sass */
+/* line 27, ../sass/styles.sass */
 .float-center {
   display: block;
   margin: 0 auto;
   margin-bottom: 20px;
 }
 
-/* line 28, ../sass/styles.sass */
+/* line 31, ../sass/styles.sass */
 .float-left {
   float: left;
   margin-right: 20px;
 }
 
-/* line 31, ../sass/styles.sass */
+/* line 34, ../sass/styles.sass */
 .float-right {
   float: right;
   margin-left: 20px;
 }
 
-/* line 36, ../sass/styles.sass */
+/* line 39, ../sass/styles.sass */
 body {
   color: white;
   background: #008081;
+  font-family: "droidsans", Arial, sans;
 }
 
-/* line 41, ../sass/styles.sass */
+/* line 44, ../sass/styles.sass */
+p {
+  line-height: 1.3em;
+  padding-bottom: 1.5em;
+}
+
+/* line 49, ../sass/styles.sass */
+h1, h2, h3, h4, h5, h6 {
+  font-family: "nunitobold", Arial, sans;
+}
+
+/* line 51, ../sass/styles.sass */
 h1, h2 {
   text-transform: uppercase;
 }
 
-/* line 44, ../sass/styles.sass */
+/* line 54, ../sass/styles.sass */
 h1 {
   font-size: 50px;
   text-align: center;
   margin: 0 0 1em 0;
 }
 
-/* line 48, ../sass/styles.sass */
+/* line 58, ../sass/styles.sass */
 h2 {
   font-size: 30px;
   text-align: center;
   margin: 0 0 1em 0;
 }
 
-/* line 52, ../sass/styles.sass */
+/* line 62, ../sass/styles.sass */
 h3 {
   font-size: 25px;
   margin: 0 0 1em 0;
 }
 
-/* line 55, ../sass/styles.sass */
+/* line 65, ../sass/styles.sass */
 h4 {
   font-size: 20px;
   margin: 0.5em 0;
 }
 
-/* line 60, ../sass/styles.sass */
+/* line 70, ../sass/styles.sass */
 a {
   text-decoration: none;
   color: white;
 }
 
-/* line 64, ../sass/styles.sass */
+/* line 74, ../sass/styles.sass */
 #interna a:hover {
   color: #001b1b;
 }
 
-/* line 68, ../sass/styles.sass */
+/* line 78, ../sass/styles.sass */
 header {
   height: 80px;
   position: fixed;
   width: 100%;
   background: #008081;
-  z-index: 1000;
+  z-index: 1900;
   top: 0px;
 }
-/* line 77, ../sass/styles.sass */
+/* line 87, ../sass/styles.sass */
 header #logo {
   float: left;
 }
 
-/* line 81, ../sass/styles.sass */
+/* line 91, ../sass/styles.sass */
 nav {
   height: 80px;
   width: 960px;
-  position: relative;
+  position: absolute;
+  font-family: "nunitolight";
 }
-/* line 85, ../sass/styles.sass */
+/* line 96, ../sass/styles.sass */
 nav > ul {
   margin: 0;
   padding: 0;
   position: absolute;
   right: 0px;
 }
-/* line 90, ../sass/styles.sass */
+/* line 101, ../sass/styles.sass */
 nav > ul > li {
   position: relative;
   text-align: center;
   float: left;
 }
-/* line 94, ../sass/styles.sass */
+/* line 105, ../sass/styles.sass */
 nav > ul > li > a {
   height: 80px;
   display: table-cell;
   vertical-align: middle;
   width: 150px;
   text-transform: uppercase;
+  font-family: "nunitobold";
 }
-/* line 100, ../sass/styles.sass */
+/* line 112, ../sass/styles.sass */
 nav > ul > li ul {
   display: none;
   position: absolute;
   background: #00a2a0;
   width: 150px;
 }
-/* line 106, ../sass/styles.sass */
+/* line 118, ../sass/styles.sass */
 nav > ul > li ul li {
   list-style: none;
 }
-/* line 108, ../sass/styles.sass */
+/* line 120, ../sass/styles.sass */
 nav > ul > li ul li a {
   display: block;
   padding: 10px 0;
 }
-/* line 111, ../sass/styles.sass */
+/* line 123, ../sass/styles.sass */
 nav > ul > li ul li a:hover {
   background: #00bfb8;
 }
-/* line 114, ../sass/styles.sass */
+/* line 126, ../sass/styles.sass */
 nav > ul > li:hover {
   background: #00a2a0;
 }
-/* line 116, ../sass/styles.sass */
+/* line 128, ../sass/styles.sass */
 nav > ul > li:hover ul {
   display: block;
 }
 
-/* line 120, ../sass/styles.sass */
+/* line 132, ../sass/styles.sass */
 #slider {
   height: 545px;
+  overflow: hidden;
   background: #c1ad9f;
   margin-top: 80px;
+  position: relative;
+}
+/* line 139, ../sass/styles.sass */
+#slider img {
+  width: 100%;
+  min-height: 550px;
 }
 
-/* line 126, ../sass/styles.sass */
-#interna {
-  *zoom: 1;
-  background: url("../img/bg-seccion.png") top center no-repeat;
-  padding-top: 180px;
+/* line 143, ../sass/styles.sass */
+.nivo-controlNav {
+  width: 960px;
+  margin: 0 auto;
   position: relative;
-  margin-top: -280px;
+  z-index: 3000;
+}
+
+/* line 150, ../sass/styles.sass */
+#interna, #home-01 {
+  *zoom: 1;
+  background: url("../img/bg-seccion.png") no-repeat;
+  background-size: cover;
+  padding-top: 130px;
+  position: relative;
+  margin-top: -200px;
+  z-index: 1800;
 }
 /* line 18, ../sass/bourbon/addons/_clearfix.scss */
-#interna:before, #interna:after {
+#interna:before, #interna:after, #home-01:before, #home-01:after {
   content: " ";
   display: table;
 }
 /* line 23, ../sass/bourbon/addons/_clearfix.scss */
-#interna:after {
+#interna:after, #home-01:after {
   clear: both;
 }
 
-/* line 136, ../sass/styles.sass */
+/* line 160, ../sass/styles.sass */
+#home-02 {
+  background: url("../img/bg-01.png") no-repeat;
+  z-index: 1810;
+}
+
+/* line 163, ../sass/styles.sass */
+#home-03 {
+  background: url("../img/bg-02.png") no-repeat;
+  z-index: 1820;
+  margin-top: -160px;
+}
+
+/* line 167, ../sass/styles.sass */
+#home-04 {
+  background: url("../img/bg-03.png") no-repeat;
+  z-index: 1820;
+  margin-top: -160px;
+}
+
+/* line 172, ../sass/styles.sass */
+#home-02, #home-03, #home-04 {
+  background-size: cover;
+  padding-top: 130px;
+  position: relative;
+  *zoom: 1;
+}
+/* line 18, ../sass/bourbon/addons/_clearfix.scss */
+#home-02:before, #home-02:after, #home-03:before, #home-03:after, #home-04:before, #home-04:after {
+  content: " ";
+  display: table;
+}
+/* line 23, ../sass/bourbon/addons/_clearfix.scss */
+#home-02:after, #home-03:after, #home-04:after {
+  clear: both;
+}
+/* line 178, ../sass/styles.sass */
+#home-02 article, #home-03 article, #home-04 article {
+  padding-bottom: 120px;
+  *zoom: 1;
+}
+/* line 18, ../sass/bourbon/addons/_clearfix.scss */
+#home-02 article:before, #home-02 article:after, #home-03 article:before, #home-03 article:after, #home-04 article:before, #home-04 article:after {
+  content: " ";
+  display: table;
+}
+/* line 23, ../sass/bourbon/addons/_clearfix.scss */
+#home-02 article:after, #home-03 article:after, #home-04 article:after {
+  clear: both;
+}
+/* line 181, ../sass/styles.sass */
+#home-02 article p, #home-03 article p, #home-04 article p {
+  font-family: "droidsansbold";
+}
+/* line 184, ../sass/styles.sass */
+#home-02 article div, #home-03 article div, #home-04 article div {
+  display: block;
+  float: left;
+  margin-right: 2.35765%;
+  width: 48.82117%;
+}
+/* line 41, ../sass/neat/grid/_span-columns.scss */
+#home-02 article div:last-child, #home-03 article div:last-child, #home-04 article div:last-child {
+  margin-right: 0;
+}
+/* line 186, ../sass/styles.sass */
+#home-02 article div h2, #home-03 article div h2, #home-04 article div h2 {
+  margin-top: 40px;
+  text-align: left;
+  font-size: 50px;
+}
+/* line 190, ../sass/styles.sass */
+#home-02 article div.last, #home-03 article div.last, #home-04 article div.last {
+  margin-right: 0;
+}
+
+/* line 195, ../sass/styles.sass */
 #tabs h2 {
   float: left;
   margin: 0 0 1em 0;
 }
-/* line 140, ../sass/styles.sass */
+/* line 199, ../sass/styles.sass */
 #tabs ul {
   text-align: right;
 }
-/* line 142, ../sass/styles.sass */
+/* line 201, ../sass/styles.sass */
 #tabs ul li {
   display: inline-block;
 }
-/* line 144, ../sass/styles.sass */
+/* line 203, ../sass/styles.sass */
 #tabs ul li a {
   background: #01bfb9;
   font-size: 14px;
@@ -1842,11 +1990,11 @@ nav > ul > li:hover ul {
   outline: none;
   padding: 10px 15px;
 }
-/* line 151, ../sass/styles.sass */
+/* line 210, ../sass/styles.sass */
 #tabs ul li a.active {
   background: #2ad27a;
 }
-/* line 154, ../sass/styles.sass */
+/* line 213, ../sass/styles.sass */
 #tabs ul li:first-of-type a {
   -moz-border-radius-topleft: 20px;
   -webkit-border-top-left-radius: 20px;
@@ -1855,7 +2003,7 @@ nav > ul > li:hover ul {
   -webkit-border-bottom-left-radius: 20px;
   border-bottom-left-radius: 20px;
 }
-/* line 157, ../sass/styles.sass */
+/* line 216, ../sass/styles.sass */
 #tabs ul li:last-of-type a {
   -moz-border-radius-topright: 20px;
   -webkit-border-top-right-radius: 20px;
@@ -1865,33 +2013,33 @@ nav > ul > li:hover ul {
   border-bottom-right-radius: 20px;
 }
 
-/* line 162, ../sass/styles.sass */
+/* line 221, ../sass/styles.sass */
 .form {
   display: block;
   float: left;
   margin-right: 2.35765%;
   width: 65.88078%;
   margin-top: 20px;
-  border-right: 1px solid #a2dddb;
+  border-right: 1px solid #70c1bf;
   padding-right: 20px;
 }
 /* line 41, ../sass/neat/grid/_span-columns.scss */
 .form:last-child {
   margin-right: 0;
 }
-/* line 167, ../sass/styles.sass */
+/* line 226, ../sass/styles.sass */
 .form label {
   display: block;
   margin: 10px 0;
 }
-/* line 170, ../sass/styles.sass */
+/* line 229, ../sass/styles.sass */
 .form label span {
   width: 80px;
   display: block;
   float: left;
   line-height: 26px;
 }
-/* line 175, ../sass/styles.sass */
+/* line 234, ../sass/styles.sass */
 .form label textarea, .form label input {
   width: 530px;
   padding: 5px 10px;
@@ -1904,11 +2052,11 @@ nav > ul > li:hover ul {
   -webkit-border-bottom-left-radius: 20px;
   border-bottom-left-radius: 20px;
 }
-/* line 182, ../sass/styles.sass */
+/* line 241, ../sass/styles.sass */
 .form label textarea {
   height: 200px;
 }
-/* line 184, ../sass/styles.sass */
+/* line 243, ../sass/styles.sass */
 .form > button {
   font-size: 19px;
   padding: 0.5em 1.5em;
@@ -1974,7 +2122,7 @@ nav > ul > li:hover ul {
   box-shadow: #004d4e 0 0.2em 0px;
 }
 
-/* line 189, ../sass/styles.sass */
+/* line 248, ../sass/styles.sass */
 .address {
   display: block;
   float: left;
@@ -1987,7 +2135,7 @@ nav > ul > li:hover ul {
   margin-right: 0;
 }
 
-/* line 194, ../sass/styles.sass */
+/* line 253, ../sass/styles.sass */
 #social {
   background: url("../img/bg-socialmedia.png");
   width: 52px;
@@ -1997,6 +2145,7 @@ nav > ul > li:hover ul {
   right: 0px;
   padding-top: 20px;
   padding-left: 27px;
+  z-index: 1890;
   *zoom: 1;
 }
 /* line 18, ../sass/bourbon/addons/_clearfix.scss */
@@ -2008,7 +2157,7 @@ nav > ul > li:hover ul {
 #social:after {
   clear: both;
 }
-/* line 206, ../sass/styles.sass */
+/* line 265, ../sass/styles.sass */
 #social a {
   display: block;
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
@@ -2017,12 +2166,12 @@ nav > ul > li:hover ul {
   height: 21px;
   margin-bottom: 5px;
 }
-/* line 214, ../sass/styles.sass */
+/* line 273, ../sass/styles.sass */
 #social a:hover {
   color: #008081;
 }
 
-/* line 218, ../sass/styles.sass */
+/* line 277, ../sass/styles.sass */
 #top {
   position: fixed;
   bottom: 30px;
@@ -2034,12 +2183,18 @@ nav > ul > li:hover ul {
   text-align: center;
   line-height: 70px;
   font-size: 0.9em;
+  z-index: 1870;
 }
 
-/* line 231, ../sass/styles.sass */
+/* line 291, ../sass/styles.sass */
 footer {
-  background: url("../img/bg-footer.png") top center no-repeat;
+  background: url("../img/bg-footer.png") no-repeat top center;
+  background-size: cover;
   height: 200px;
   padding-top: 140px;
   text-align: right;
+}
+/* line 298, ../sass/styles.sass */
+footer p {
+  padding-bottom: 0.3em;
 }
