--- a/includes/head.jade
+++ b/includes/head.jade
@@ -2,12 +2,22 @@ head
 	meta(charset='utf-8')
 	title Velemed             
 	meta(name='description', content='')
-	meta(name='viewport', content='width=device-width')
-	link(rel='stylesheet', href='css/styles.css') 
+	meta(name='viewport', content='width=device-width, maximum-scale=1.0, user-scalable=no')
+	link(rel='stylesheet', href='css/styles.css')
+	link(rel='stylesheet', href='default/default.css')
+
+	//if lt IE 9
+		link(rel='stylesheet', href='css/styles-ie.css')
+
+	//if lt IE 8
+		link(rel='stylesheet', href='css/styles-ie7.css')
 
 	script(src='js/jquery-1.8.3.min.js')
 	script(src='js/jquery.hashchange.min.js')
 	script(src='js/jquery.easytabs.min.js')
+	script(src='js/jquery.nivo.slider.pack.js')
 	script(src='js/scripts.js')
+
+
 	//if lt IE 9
 		script(src='js/html5shiv.js')
