--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -16,11 +16,14 @@ $img: "../img/"
 @import "bourbon/bourbon"
 @import "neat/neat"
 @import "sassy-buttons"
+@import "fonts"
 
 // utils
 .container
 	width: 960px
 	margin: 0 auto
+	position: relative
+
 .float-center 
 	display: block
 	margin: 0 auto
@@ -36,8 +39,15 @@ $img: "../img/"
 body 
 	color: white
 	background: $primario
+	font-family: 'droidsans', Arial, sans
+
+p
+	line-height: 1.3em
+	padding-bottom: 1.5em
 
 // titulos
+h1, h2, h3, h4, h5, h6
+	font-family: 'nunitobold', Arial, sans
 h1,h2
 	text-transform: uppercase
 
@@ -70,7 +80,7 @@ header
 	position: fixed
 	width: 100%
 	background: $primario
-	z-index: 1000
+	z-index: 1900
 	top: 0px
 	
 
@@ -81,7 +91,8 @@ header
 nav
 	height: 80px
 	width: 960px
-	position: relative
+	position: absolute
+	font-family: 'nunitolight'
 	>ul
 		margin: 0
 		padding: 0
@@ -97,6 +108,7 @@ nav
 				vertical-align: middle
 				width: 150px
 				text-transform: uppercase
+				font-family: 'nunitobold'
 			ul
 				display: none
 				position: absolute
@@ -119,19 +131,66 @@ nav
 // slider
 #slider
 	height: 545px
+	overflow: hidden
 	background: #C1AD9F
 	margin-top: 80px
-
-// interna
-#interna
-	@include clearfix
-	background: url("#{$img}bg-seccion.png") top center no-repeat
-	padding-top: 180px
 	position: relative
-	margin-top: -280px
+
+	img
+		width: 100%
+		min-height: 550px
+
+.nivo-controlNav 
+	width: 960px
+	margin: 0 auto
+	position: relative
+	z-index: 3000
+
+// bloque azul
+#interna, #home-01
+	@include clearfix
+	background: url("#{$img}bg-seccion.png") no-repeat
+	background-size: cover
+	padding-top: 130px
+	position: relative
+	margin-top: -200px
+	z-index: 1800
+
+// home
+#home-02 
+	background: url("#{$img}bg-01.png") no-repeat
+	z-index: 1810
+#home-03 
+	background: url("#{$img}bg-02.png") no-repeat
+	z-index: 1820
+	margin-top: -160px
+#home-04 
+	background: url("#{$img}bg-03.png") no-repeat
+	z-index: 1820
+	margin-top: -160px
+
+#home-02, #home-03, #home-04 
+	background-size: cover
+	padding-top: 130px
+	position: relative
+	@include clearfix
+
+	article
+		padding-bottom: 120px
+		@include clearfix
+		p
+			font-family: "droidsansbold"
+
+		div
+			@include span-columns(6)
+			h2
+				margin-top: 40px
+				text-align: left
+				font-size: 50px
+			&.last
+				@include omega()
 
 // tabs
-
 #tabs 
 	h2 
 		float: left
@@ -200,7 +259,7 @@ nav
 	right: 0px
 	padding-top: 20px
 	padding-left: 27px
-
+	z-index: 1890
 	@include clearfix
 
 	a
@@ -226,10 +285,15 @@ nav
 	text-align: center
 	line-height: 70px
 	font-size: .9em
+	z-index: 1870
 
 //footer
 footer
-	background: url("#{$img}bg-footer.png") top center no-repeat
+	background: url("#{$img}bg-footer.png") no-repeat top center
+	background-size: cover
 	height: 200px
 	padding-top: 140px
 	text-align: right
+
+	p
+		padding-bottom: .3em 
