--- a/page.jade
+++ b/page.jade
@@ -5,14 +5,13 @@ html
 	body
 		include includes/header
 
-		#slider
-			// imagenes
+		include includes/slider
 
 		section#interna
 
 			.container
 				
-				h1 LABORATORIOS
+				h1 LABORATORIOS 
 				
 				// easy-tabs
 				#tabs
