--- a/sass/styles-ie.sass
+++ b/sass/styles-ie.sass
@@ -1,5 +1,6 @@
 #interna, #home-01
 	background-image: none
+	padding-top: 100px
 	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/bg-seccion.png', sizingMethod='scale')
 	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/bg-seccion.png', sizingMethod='scale')"
 
@@ -17,3 +18,11 @@
 	background-image: none
 	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/bg-03.png', sizingMethod='scale')
 	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/bg-03.png', sizingMethod='scale')"
+
+footer
+	background-image: none
+	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/bg-footer.png', sizingMethod='scale')
+	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/bg-footer.png', sizingMethod='scale')"
+
+header
+	border-bottom: 5px solid #006666
