--- a/includes/head.jade
+++ b/includes/head.jade
@@ -11,6 +11,7 @@ head
 
 	//if lt IE 8
 		link(rel='stylesheet', href='css/styles-ie7.css')
+		link(rel='stylesheet', href='css/font-awesome-ie7.css')
 
 	script(src='js/jquery-1.8.3.min.js')
 	script(src='js/jquery.hashchange.min.js')
