--- a/sass/fonts.sass
+++ b/sass/fonts.sass
@@ -1,4 +1,3 @@
-// nunito - titulos
 
 @font-face 
 	font-family: 'nunitobold'
@@ -21,17 +20,9 @@
 	font-weight: normal
 	font-style: normal
 
-// droid sans - contenido
 @font-face 
-	font-family: 'droidsansbold'
-	src: url('../font/DroidSans-Bold-webfont.eot')
-	src: url('../font/DroidSans-Bold-webfont.eot?#iefix') format('embedded-opentype'), url('../font/DroidSans-Bold-webfont.woff') format('woff'), url('../font/DroidSans-Bold-webfont.ttf') format('truetype'), url('../font/DroidSans-Bold-webfont.svg#droidsansbold') format('svg')
-	font-weight: normal
-	font-style: normal
-
-@font-face 
-	font-family: 'droidsans'
+	font-family: 'DroidSansRegular'
 	src: url('../font/DroidSans-webfont.eot')
-	src: url('../font/DroidSans-webfont.eot?#iefix') format('embedded-opentype'), url('../font/DroidSans-webfont.woff') format('woff'), url('../font/DroidSans-webfont.ttf') format('truetype'), url('../font/DroidSans-webfont.svg#droidsans') format('svg')
+	src: url('../font/DroidSans-webfont.eot?#iefix') format('embedded-opentype'), url('../font/DroidSans-webfont.woff') format('woff'), url('../font/DroidSans-webfont.ttf') format('truetype'), url('../font/DroidSans-webfont.svg#DroidSansRegular') format('svg')
 	font-weight: normal
 	font-style: normal
