--- a/includes/header.jade
+++ b/includes/header.jade
@@ -1,62 +1,63 @@
 header
 	.container
 		#logo
+			a(href="index.html")
 			img(src="img/logo-velemed.png", width="311", height="148")
 		nav
 			ul
 				li
-					a(href="") Nosotros
+					a(href="page.html") Nosotros
 					ul
 						li
-							a(href="") Filosofía
+							a(href="page.html") Filosofía
 						li
-							a(href="") Valores
+							a(href="page.html") Valores
 						li
-							a(href="") Responsabilidad Social
+							a(href="page.html") Responsabilidad Social
 						li
-							a(href="") Reconocimientos
+							a(href="page.html") Reconocimientos
 				li
-					a(href="") Gobierno
+					a(href="page.html") Gobierno
 					ul
 						li
-							a(href="") Presentación 
+							a(href="page.html") Presentación 
 						li
-							a(href="") Implementaciones
+							a(href="page.html") Implementaciones
 						li
-							a(href="") Unidades Móviles
+							a(href="page.html") Unidades Móviles
 						li
-							a(href="") Casos de Éxito
+							a(href="page.html") Casos de Éxito
 						li
-							a(href="") Galería
+							a(href="page.html") Galería
 						li
-							a(href="") Contacto
+							a(href="page.html") Contacto
 				li
-					a(href="") Empresas
+					a(href="page.html") Empresas
 					ul
 						li
-							a(href="") Presentación 
+							a(href="page.html") Presentación 
 						li
-							a(href="") Medicina Preventiva
+							a(href="page.html") Medicina Preventiva
 						li
-							a(href="") Pruebas Rápidas
+							a(href="page.html") Pruebas Rápidas
 						li
-							a(href="") Casos de Éxito
+							a(href="page.html") Casos de Éxito
 						li
-							a(href="") Galería
+							a(href="page.html") Galería
 						li
-							a(href="") Contacto
+							a(href="page.html") Contacto
 				li
-					a(href="") Laboratorios Clinicos
+					a(href="page.html") Laboratorios Clinicos
 					ul
 						li
-							a(href="") Público 
+							a(href="page.html") Público 
 						li
-							a(href="") Sucursales
+							a(href="page.html") Sucursales
 						li
-							a(href="") Comunidad Médica
+							a(href="page.html") Comunidad Médica
 						li
-							a(href="") Bolsa de Trabajo
+							a(href="page.html") Bolsa de Trabajo
 						li
-							a(href="") Galería
-				li
-					a(href="") Intranet
+							a(href="page.html") Galería
+				li.intranet
+					a(href="page.html") Intranet
