--- a/index.jade
+++ b/index.jade
@@ -19,7 +19,8 @@ html
 			article.container
 
 				div
-					img(src="http://placehold.it/468x400/DDF4A4")
+					a(class="fancybox-media", href="http://www.youtube.com/watch?v=opj24KnzrWo")
+						img(src="http://placehold.it/468x400/DDF4A4")
 				div.last
 					h2 Laboratorio 
 					p Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps.
