--- a/page.jade
+++ b/page.jade
@@ -13,9 +13,7 @@ html
 				
 				h1 LABORATORIOS 
 				
-				// easy-tabs
 				#tabs
-
 					h2 COMUNIDAD MÉDICA
 					ul
 						li
@@ -30,7 +28,16 @@ html
 						img(src="http://placehold.it/960x150").float-center
 						p Cupcake ipsum dolor sit amet jelly. Cheesecake jelly lemon drops cookie pudding. Oat cake icing candy cookie lemon drops danish muffin. Gummies donut  chocolate cake  donut chupa chups. Danish sugar plum liquorice ice cream croissant sesame snaps.
 						p Ice cream candy canes cookie marzipan dragée muffin brownie topping. Jelly-o jelly gingerbread tart biscuit candy muffin sugar plum liquorice. Sesame snaps jujubes danish donut. Marshmallow applicake apple pie macaroon caramels chocolate bar cupcake lemon drops pastry.
-					
+						
+						h1 Titulo H1
+						h2 Titulo H2
+						h3 Titulo H3
+
+						ul
+							li Item 1
+							li Item 2
+							li Item 3
+
 					article#menu-02
 						h3 Laboratorios Quimicos
 						img(src="http://placehold.it/300x200").float-left
