--- a/css/styles.css
+++ b/css/styles.css
@@ -1723,58 +1723,65 @@ p {
   padding-bottom: 1.5em;
 }
 
-/* line 49, ../sass/styles.sass */
+/* line 48, ../sass/styles.sass */
+article li {
+  list-style: circle;
+  line-height: 1.3em;
+  margin-left: 20px;
+}
+
+/* line 54, ../sass/styles.sass */
 h1, h2, h3, h4, h5, h6 {
   font-family: "nunitobold", Arial, sans;
 }
 
-/* line 51, ../sass/styles.sass */
+/* line 56, ../sass/styles.sass */
 h1, h2 {
   text-transform: uppercase;
 }
 
-/* line 54, ../sass/styles.sass */
+/* line 59, ../sass/styles.sass */
 h1 {
   font-size: 50px;
   text-align: center;
   margin: 0 0 1em 0;
 }
 
-/* line 58, ../sass/styles.sass */
+/* line 63, ../sass/styles.sass */
 h2 {
   font-size: 30px;
   text-align: center;
   margin: 0 0 1em 0;
 }
 
-/* line 62, ../sass/styles.sass */
+/* line 67, ../sass/styles.sass */
 h3 {
   font-size: 25px;
   margin: 0 0 1em 0;
 }
 
-/* line 65, ../sass/styles.sass */
+/* line 70, ../sass/styles.sass */
 h4 {
   font-size: 20px;
   margin: 0.5em 0;
 }
 
-/* line 70, ../sass/styles.sass */
+/* line 75, ../sass/styles.sass */
 a {
   text-decoration: none;
   color: white;
 }
 
-/* line 73, ../sass/styles.sass */
+/* line 78, ../sass/styles.sass */
 #interna {
   margin-bottom: 200px;
 }
-/* line 75, ../sass/styles.sass */
+/* line 80, ../sass/styles.sass */
 #interna a:hover {
   color: #001b1b;
 }
 
-/* line 77, ../sass/styles.sass */
+/* line 82, ../sass/styles.sass */
 .link-contacto {
   background: url("../img/contacto.png") no-repeat;
   display: block;
@@ -1786,7 +1793,7 @@ a {
   font-family: "nunitobold";
 }
 
-/* line 88, ../sass/styles.sass */
+/* line 93, ../sass/styles.sass */
 header {
   height: 80px;
   position: fixed;
@@ -1798,32 +1805,45 @@ header {
   -moz-box-shadow: 0px 0px 15px black;
   box-shadow: 0px 0px 15px black;
 }
-/* line 98, ../sass/styles.sass */
+/* line 103, ../sass/styles.sass */
 header #logo {
   float: left;
 }
+/* line 105, ../sass/styles.sass */
+header #logo a {
+  display: block;
+  width: 170px;
+  height: 148px;
+  position: absolute;
+  z-index: 3000;
+}
 
-/* line 102, ../sass/styles.sass */
+/* line 113, ../sass/styles.sass */
 nav {
   height: 80px;
   width: 960px;
   position: absolute;
   font-family: "nunitolight";
 }
-/* line 107, ../sass/styles.sass */
+/* line 118, ../sass/styles.sass */
 nav > ul {
   margin: 0;
   padding: 0;
   position: absolute;
   right: 0px;
 }
-/* line 112, ../sass/styles.sass */
+/* line 123, ../sass/styles.sass */
 nav > ul > li {
   position: relative;
   text-align: center;
   float: left;
+  background: url("../img/bg-menu.png") no-repeat bottom center;
 }
-/* line 116, ../sass/styles.sass */
+/* line 128, ../sass/styles.sass */
+nav > ul > li.intranet {
+  background: none;
+}
+/* line 130, ../sass/styles.sass */
 nav > ul > li > a {
   height: 80px;
   display: table-cell;
@@ -1832,36 +1852,36 @@ nav > ul > li > a {
   text-transform: uppercase;
   font-family: "nunitobold";
 }
-/* line 123, ../sass/styles.sass */
+/* line 137, ../sass/styles.sass */
 nav > ul > li ul {
   display: none;
   position: absolute;
   background: #00a2a0;
   width: 150px;
 }
-/* line 129, ../sass/styles.sass */
+/* line 143, ../sass/styles.sass */
 nav > ul > li ul li {
   list-style: none;
 }
-/* line 131, ../sass/styles.sass */
+/* line 145, ../sass/styles.sass */
 nav > ul > li ul li a {
   display: block;
   padding: 10px 0;
 }
-/* line 134, ../sass/styles.sass */
+/* line 148, ../sass/styles.sass */
 nav > ul > li ul li a:hover {
   background: #00bfb8;
 }
-/* line 137, ../sass/styles.sass */
-nav > ul > li:hover {
+/* line 151, ../sass/styles.sass */
+nav > ul > li:hover, nav > ul > li.active {
   background: #00a2a0;
 }
-/* line 139, ../sass/styles.sass */
-nav > ul > li:hover ul {
+/* line 153, ../sass/styles.sass */
+nav > ul > li:hover ul, nav > ul > li.active ul {
   display: block;
 }
 
-/* line 143, ../sass/styles.sass */
+/* line 157, ../sass/styles.sass */
 #slider {
   height: 545px;
   overflow: hidden;
@@ -1869,21 +1889,39 @@ nav > ul > li:hover ul {
   margin-top: 80px;
   position: relative;
 }
-/* line 150, ../sass/styles.sass */
+/* line 164, ../sass/styles.sass */
 #slider img {
   width: 100%;
   min-height: 550px;
 }
 
-/* line 154, ../sass/styles.sass */
+/* line 168, ../sass/styles.sass */
 .nivo-controlNav {
-  width: 960px;
-  margin: 0 auto;
-  position: relative;
-  z-index: 3000;
+  display: none;
 }
 
-/* line 161, ../sass/styles.sass */
+/* line 171, ../sass/styles.sass */
+.slidesjs-next {
+  position: relative;
+  z-index: 9001;
+  background: url("../img/next.png") no-repeat right top;
+  display: block;
+  width: 92px;
+  height: 56px;
+  right: 0px;
+}
+
+/* line 180, ../sass/styles.sass */
+.slidesjs-previous {
+  position: relative;
+  z-index: 9002;
+  background: url("../img/prev.png") no-repeat right top;
+  display: block;
+  width: 106px;
+  height: 56px;
+}
+
+/* line 189, ../sass/styles.sass */
 #interna, #home-01 {
   *zoom: 1;
   background: url("../img/bg-seccion.png") no-repeat;
@@ -1903,27 +1941,27 @@ nav > ul > li:hover ul {
   clear: both;
 }
 
-/* line 171, ../sass/styles.sass */
+/* line 199, ../sass/styles.sass */
 #home-02 {
   background: url("../img/bg-01.png") no-repeat;
   z-index: 1810;
 }
 
-/* line 174, ../sass/styles.sass */
+/* line 202, ../sass/styles.sass */
 #home-03 {
   background: url("../img/bg-02.png") no-repeat;
   z-index: 1820;
   margin-top: -160px;
 }
 
-/* line 178, ../sass/styles.sass */
+/* line 206, ../sass/styles.sass */
 #home-04 {
   background: url("../img/bg-03.png") no-repeat;
   z-index: 1830;
   margin-top: -160px;
 }
 
-/* line 183, ../sass/styles.sass */
+/* line 211, ../sass/styles.sass */
 #home-02, #home-03, #home-04 {
   background-size: cover;
   padding-top: 130px;
@@ -1939,7 +1977,7 @@ nav > ul > li:hover ul {
 #home-02:after, #home-03:after, #home-04:after {
   clear: both;
 }
-/* line 189, ../sass/styles.sass */
+/* line 217, ../sass/styles.sass */
 #home-02 article, #home-03 article, #home-04 article {
   padding-bottom: 120px;
   *zoom: 1;
@@ -1953,11 +1991,11 @@ nav > ul > li:hover ul {
 #home-02 article:after, #home-03 article:after, #home-04 article:after {
   clear: both;
 }
-/* line 192, ../sass/styles.sass */
+/* line 220, ../sass/styles.sass */
 #home-02 article p, #home-03 article p, #home-04 article p {
   font-weight: bold;
 }
-/* line 195, ../sass/styles.sass */
+/* line 223, ../sass/styles.sass */
 #home-02 article div, #home-03 article div, #home-04 article div {
   display: block;
   float: left;
@@ -1968,32 +2006,32 @@ nav > ul > li:hover ul {
 #home-02 article div:last-child, #home-03 article div:last-child, #home-04 article div:last-child {
   margin-right: 0;
 }
-/* line 197, ../sass/styles.sass */
+/* line 225, ../sass/styles.sass */
 #home-02 article div h2, #home-03 article div h2, #home-04 article div h2 {
   margin-top: 40px;
   text-align: left;
   font-size: 50px;
 }
-/* line 201, ../sass/styles.sass */
+/* line 229, ../sass/styles.sass */
 #home-02 article div.last, #home-03 article div.last, #home-04 article div.last {
   margin-right: 0;
 }
 
-/* line 206, ../sass/styles.sass */
-#tabs h2 {
+/* line 234, ../sass/styles.sass */
+#tabs > h2 {
   float: left;
   margin: 0 0 1em 0;
 }
-/* line 210, ../sass/styles.sass */
-#tabs ul {
+/* line 238, ../sass/styles.sass */
+#tabs > ul {
   text-align: right;
 }
-/* line 212, ../sass/styles.sass */
-#tabs ul li {
+/* line 240, ../sass/styles.sass */
+#tabs > ul li {
   display: inline-block;
 }
-/* line 214, ../sass/styles.sass */
-#tabs ul li a {
+/* line 242, ../sass/styles.sass */
+#tabs > ul li a {
   background: #01bfb9;
   font-size: 14px;
   display: block;
@@ -2001,12 +2039,12 @@ nav > ul > li:hover ul {
   outline: none;
   padding: 10px 15px;
 }
-/* line 221, ../sass/styles.sass */
-#tabs ul li a.active {
+/* line 249, ../sass/styles.sass */
+#tabs > ul li a.active {
   background: #2ad27a;
 }
-/* line 224, ../sass/styles.sass */
-#tabs ul li:first-of-type a {
+/* line 252, ../sass/styles.sass */
+#tabs > ul li:first-of-type a {
   -moz-border-radius-topleft: 20px;
   -webkit-border-top-left-radius: 20px;
   border-top-left-radius: 20px;
@@ -2014,8 +2052,8 @@ nav > ul > li:hover ul {
   -webkit-border-bottom-left-radius: 20px;
   border-bottom-left-radius: 20px;
 }
-/* line 227, ../sass/styles.sass */
-#tabs ul li:last-of-type a {
+/* line 255, ../sass/styles.sass */
+#tabs > ul li:last-of-type a {
   -moz-border-radius-topright: 20px;
   -webkit-border-top-right-radius: 20px;
   border-top-right-radius: 20px;
@@ -2024,7 +2062,7 @@ nav > ul > li:hover ul {
   border-bottom-right-radius: 20px;
 }
 
-/* line 232, ../sass/styles.sass */
+/* line 260, ../sass/styles.sass */
 .form {
   display: block;
   float: left;
@@ -2038,19 +2076,19 @@ nav > ul > li:hover ul {
 .form:last-child {
   margin-right: 0;
 }
-/* line 237, ../sass/styles.sass */
+/* line 265, ../sass/styles.sass */
 .form label {
   display: block;
   margin: 10px 0;
 }
-/* line 240, ../sass/styles.sass */
+/* line 268, ../sass/styles.sass */
 .form label span {
   width: 80px;
   display: block;
   float: left;
   line-height: 26px;
 }
-/* line 245, ../sass/styles.sass */
+/* line 273, ../sass/styles.sass */
 .form label textarea, .form label input {
   width: 530px;
   padding: 5px 10px;
@@ -2063,11 +2101,11 @@ nav > ul > li:hover ul {
   -webkit-border-bottom-left-radius: 20px;
   border-bottom-left-radius: 20px;
 }
-/* line 252, ../sass/styles.sass */
+/* line 280, ../sass/styles.sass */
 .form label textarea {
   height: 200px;
 }
-/* line 254, ../sass/styles.sass */
+/* line 282, ../sass/styles.sass */
 .form > button {
   font-size: 19px;
   padding: 0.5em 1.5em;
@@ -2133,7 +2171,7 @@ nav > ul > li:hover ul {
   box-shadow: #004d4e 0 0.2em 0px;
 }
 
-/* line 259, ../sass/styles.sass */
+/* line 287, ../sass/styles.sass */
 .address {
   display: block;
   float: left;
@@ -2146,7 +2184,7 @@ nav > ul > li:hover ul {
   margin-right: 0;
 }
 
-/* line 264, ../sass/styles.sass */
+/* line 292, ../sass/styles.sass */
 #social {
   background: url("../img/bg-socialmedia.png");
   width: 52px;
@@ -2168,7 +2206,7 @@ nav > ul > li:hover ul {
 #social:after {
   clear: both;
 }
-/* line 276, ../sass/styles.sass */
+/* line 304, ../sass/styles.sass */
 #social a {
   display: block;
   text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
@@ -2177,12 +2215,12 @@ nav > ul > li:hover ul {
   height: 21px;
   margin-bottom: 5px;
 }
-/* line 284, ../sass/styles.sass */
+/* line 312, ../sass/styles.sass */
 #social a:hover {
   color: #008081;
 }
 
-/* line 288, ../sass/styles.sass */
+/* line 316, ../sass/styles.sass */
 #top {
   position: fixed;
   bottom: 30px;
@@ -2197,7 +2235,7 @@ nav > ul > li:hover ul {
   z-index: 2000;
 }
 
-/* line 302, ../sass/styles.sass */
+/* line 330, ../sass/styles.sass */
 footer {
   background: url("../img/bg-footer.png") no-repeat top center;
   background-size: cover;
@@ -2208,7 +2246,7 @@ footer {
   position: relative;
   margin-top: -200px;
 }
-/* line 312, ../sass/styles.sass */
+/* line 340, ../sass/styles.sass */
 footer p {
   padding-bottom: 0.3em;
 }
