--- a/includes/head.jade
+++ b/includes/head.jade
@@ -4,7 +4,7 @@ head
 	meta(name='description', content='')
 	meta(name='viewport', content='width=device-width, maximum-scale=1.0, user-scalable=no')
 	link(rel='stylesheet', href='css/styles.css')
-	link(rel='stylesheet', href='default/default.css')
+	link(rel='stylesheet', href='js/fancybox/jquery.fancybox.css')
 
 	//if lt IE 9
 		link(rel='stylesheet', href='css/styles-ie.css')
@@ -16,7 +16,9 @@ head
 	script(src='js/jquery-1.8.3.min.js')
 	script(src='js/jquery.hashchange.min.js')
 	script(src='js/jquery.easytabs.min.js')
-	script(src='js/jquery.nivo.slider.pack.js')
+	script(src='js/jquery.slides.min.js')
+	script(src='js/fancybox/jquery.fancybox.pack.js')
+	script(src='js/fancybox/helpers/jquery.fancybox-media.js')
 	script(src='js/scripts.js')
 
 
