Nueva estructura de directorios

--- a/contenido/includes/header.jade
+++ b/contenido/includes/header.jade
@@ -2,7 +2,7 @@ header
 	.container
 		#logo
 			a(href="index.html")
-			img(src="img/logo-velemed.png", width="311", height="148")
+			img(src="../imagenes/logo-velemed.png", width="311", height="148")
 		nav
 			ul
 				li
