--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -5,7 +5,7 @@ $secundario: #00BFB7
 $terciario: #01BFB9
 $green: #2AD27A
 $hover-menu: #00A2A0
-$img: "../img/"
+$img: "../imagenes/"
 
 // imports
 @import "compass/css3"
