Depuración de CSS
Se quitó la FontAwesome y se generó una fuente con los puros iconos de
social media. Se agregaron comentarios en español ._.

--- a/contenido/includes/head.jade
+++ b/contenido/includes/head.jade
@@ -16,7 +16,6 @@ head
 		link(rel='stylesheet', href='../css/styles-ie.css')
 	//if lt IE 8
 		link(rel='stylesheet', href='../css/styles-ie7.css')
-		link(rel='stylesheet', href='../css/font-awesome-ie7.css')
 
 	// Archivos JS vinculados
 	script(src='../libreria/js/jquery-1.8.3.min.js')
@@ -28,6 +27,9 @@ head
 	script(src='../libreria/js/scripts.js')
 	//if lt IE 9
 		script(src='../libreria/js/html5shiv.js')
+	//if lt IE 8
+		script(src='../libreria/js/lte-ie7.js')
+		
 
 	// Área para script de Google Analytics 
 
