--- a/contenido/includes/static.jade
+++ b/contenido/includes/static.jade
@@ -1,10 +1,10 @@
 #social 
 	a(href="#")
-		i.icon-linkedin-sign
+		i.icon-linkedin
 	a(href="#")
-		i.icon-twitter-sign
+		i.icon-twitter
 	a(href="#")
-		i.icon-facebook-sign
+		i.icon-facebook
 
 #top
 	a(href="#") Arriba
